version 1.0.7 fiscal year stats now calculates the current fiscal year correctly. changed css to better align columns.

--- a/includes/stylesheet.css
+++ b/includes/stylesheet.css
@@ -1,12 +1,8 @@
 body {
-width:825px; 
 background-color:#B5B5B5;
-margin:auto; /*Centers window*/
-padding:0px; 
 font-size:12px; 
 font-family:"Comic Sans MS"; 
 color:#333333;
-line-height:16px; 
 }
 
 br {
@@ -33,6 +29,7 @@ line-height:20px;
 
 .ul_2 {
 line-height:30px; 
+list-style: none;
 }
 
 .ul_nopadding {/*Removes padding from UL list and changes line height*/
@@ -170,7 +167,11 @@ padding-top:0px;
 padding-bottom:0px;
 }
 
+#container {
+margin: 0px auto;
+width: 850px;
 
+}
 
 #header{
 width:800px;
@@ -221,7 +222,7 @@ border-color:gray;
 border-right-color:#31436A;
 font-family:Verdana, Arial, Helvetica, sans-serif;
 font-weight:600; 
-height:800px;
+min-height:800px;
 }
 
 
@@ -229,13 +230,13 @@ height:800px;
 float: left;
 width: 625px;
 background-color:#F2F4F3;
-padding:20px 10px 0px 15px; 
-margin-bottom:10px; 
+padding:20px 10px 10px 15px; 
+line-height: 16px;
 border-color:gray;
 border-style:solid;
 border-width:1px 1px 0px 1px;
 font-family:Arial, Helvetica, sans-serif;
-height:780px;
+min-height:770px;
 }
 /*
 #content_center a {
@@ -263,17 +264,12 @@ font-size:12px;
 margin:0px;  
 }
 
-#content_right {
-float: left;
-width: 188px;
-background-color:#e1e1e1;
-border-width:0px 1px 0px 1px; 
-border-style:solid; 
-border-color:gray;
-padding-left:10px;
+
+#footer {
+min-height:50px;
+width:800px;
 
 }
-
 table.table_1 {
 border-spacing:0px;
 border-collapse:collapse;
